package by.voiteshonok.valacugi.access

object AccessTestTags {
    const val IdentificationField: String = "access_identification_field"
    const val CredentialField: String = "access_credential_field"
    const val ContinueButton: String = "access_continue_button"
}
